# ChatGM

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/llm/: output_schema.py  templates.py  validate.py
app/models/: schemas.py
app/routes/: encounter.py  llm.py  rules.py  scene.py  state.py
app/rules/: encounter.py  suggest_checks.py
app/seed/: sample_adventure.json
app/srd/: lookup.py  monsters.json
app/state/: db.py
docs/: Schemas.md  Spec.md
tests/: test_encounter.py  test_llm_compose_scene.py  test_llm_validate.py  test_routes.py  test_rules_checks.py  test_schemas.py  test_srd_lookup.py
tests/golden_samples/: compose_scene_missing_field.json  compose_scene_valid.json
