[project]
name = "chatgm"
version = "0.1.0"
description = "Adventure game backend"
authors = [{name="ChatGM"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlmodel",
    "pydantic>=2",
    "jsonschema",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "ruff",
    "black",
    "httpx",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
